# aegis-core

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/lucidomy/: __init__.py  main.py
src/lucidomy/adapters/: __init__.py
src/lucidomy/adapters/adk/: __init__.py  agent.py  main.py
src/lucidomy/adapters/genkit/: __init__.py  flow.py
src/lucidomy/adapters/langgraph/: __init__.py  callbacks.py  graph.py
src/lucidomy/core/: __init__.py  instrumentation.py  logic.py  tools.py
