[project]
name = "aegis_core"
version = "0.1.0"
description = "A multi-framework blueprint for production-grade AI..."
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "genkit",
    "genkit-plugin-google-genai",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.4",
    "pytest~=8.2"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]