[tool.poetry]
name = "lucidomy"
version = "0.1.0"
description = "A multi-framework blueprint for production-grade AI..."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "*"
python-dotenv = "*"
fastapi = "*"
uvicorn = "*"
langchain = "*"
langgraph = "*"
langchain-google-genai = "*"
genkit = "*"
genkit-plugin-google-genai = "*"

[tool.poetry.group.dev.dependencies]
ruff = "~=0.4"
pytest = "~=8.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
